--- a/style.css
+++ b/style.css
@@ -1,7 +1,36 @@
 #wrapper {
-    height: 460px;
-    width: 400px;
+    /* height: 460px;
+    width: 400px; */
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 1fr);
+}
+
+#fish {
+    grid-column: 1/4;
+    grid-row: 1/2;
+}
+
+#map {
+    grid-column: 1/4;
+    grid-row: 2/3;
+
+
+}
+#vase-small{
+    grid-column: 3/4; 
+    grid-row: 1/3;
+}
+#vase-big {
+    grid-column: 1/2; 
+    grid-row: 3/6;
+}
+#bamboo{
+    grid-column: 2/4; 
+    grid-row: 3/5;
+}
+
+#calamari {
+    grid-column: 2/4; 
+    grid-row: 5/6;
 }
